<resources>
    <string name="app_name">PlaceOfAttractions</string>
    <string name="inputBtn">Input</string>
    <string name="aboutBtn">About</string>
    <string name="mapBtn">Map</string>
    <string name="CaptionAttractions">Attractions</string>
    <string name="captionInputFormAttractions">Input form Attractions</string>
    <string name="textViewNameInput">Name:</string>
    <string name="editTextNameHint">Eiffel Tower</string>
    <string name="editTextLocationHint">Maribor</string>
    <string name="textViewLocation">Location:</string>
    <string name="editTextLatitudeHint">46.554650</string>
    <string name="textViewLatitude">Latitude:</string>
    <string name="editTextLongitudeHint">15.645881</string>
    <string name="textViewLongitude">Longitude:</string>
    <string name="editTextInfoHint">Info example</string>
    <string name="textViewInfo">Info:</string>
    <string name="textViewYear">Year:</string>
    <string name="editTextYearHint">1998</string>
    <string name="addBtn">Add</string>
    <string name="saveBtn">Save</string>
    <string name="toastInputError">Check Inputs Again!!!</string>
    <string name="toastInputYearError">Year is too large!!!</string>

    <string name="about_application">About Application</string>
    <string name="textViewName">Name:</string>
    <string name="textViewDescription">Description:</string>
    <string name="textViewVersion">Version:</string>
    <string name="textViewAuthor">Author:</string>
    <string name="textViewNameDescription">PlaceOfAttractions</string>
    <string name="textViewDescriptionDescription">An application contains \nattractions with date events. \nYou can add new attraction \nand edit it.</string>
    <string name="textViewVersionDescription">Task 9</string>
    <string name="textViewAuthorDescription">Siniša Vučetić</string>
    <string name="textViewNameMyItem">VALUE Name</string>
    <string name="textViewInfoMyItem">VALUE Info</string>
    <string name="textViewYearMyItem">VALUE Year</string>
</resources>